Rename the images folder

--- a/_posts/2022-01-26-phases.md
+++ b/_posts/2022-01-26-phases.md
@@ -69,9 +69,9 @@ ggplot(participants_use, aes(fill=usage, y = participants, x = "")) +
   labs(title = "Usage Daily Activity") +
   guides(fill = guide_legend(title = "Usage Type"))
 ```
-![](/img/posts/bg-graph03.png)<!-- -->
+![image](/assets/images/bg-graph03.png)<!-- -->
 
-### Conclusion and Recommendations
+## 6. Conclusion and Recommendations
 According with this article [**14 Fitness Trackers That Are Better Than Having Your Own Workout Buddy**][5]{:target="_blank"} from Forbes found the band or a smartwatch are popular because most people are looking to stay in shape and these devices remind you to exercise and work as your own personal trainer.
 
 This analysis the trends in smart device usage and how can apply this results to Bellabeat's customers for grow.
