--- a/_posts/2022-02-15-analysis.md
+++ b/_posts/2022-02-15-analysis.md
@@ -29,7 +29,7 @@ ggplot(aes(track_type, track_number)) +
        x = "Type")
 ```
 
-![](/img/posts/bg-graph01.png)<!-- -->
+![image](/assets/images/bg-graph01.png)<!-- -->
 ### Steps vs Calories
 
 ```
@@ -43,7 +43,7 @@ ggplot(aes(x = totalsteps, y = calories, col = calories)) +
   theme_bw()
 ```
 
-![](/img/posts/bg-graph02.png)<!-- -->
+![image](/assets/images/bg-graph02.png)<!-- -->
 
 ```
 device_use <- dailyActivity %>%
@@ -107,4 +107,4 @@ ggplot(participants_use, aes(fill=usage, y = participants, x = "")) +
   labs(title = "Usage Daily Activity") +
   guides(fill = guide_legend(title = "Usage Type"))
 ```
-![](/img/posts/bg-graph03.png)<!-- -->
+![image](/assets/images/bg-graph03.png)<!-- -->
