Fix images relative url

--- a/_posts/2022-01-26-phases.md
+++ b/_posts/2022-01-26-phases.md
@@ -33,7 +33,7 @@ Dataset include 18 files, but some of them are more detail of one of the files, 
 This small size of sample data was taken from 4/12/2016 to 5/9/2016. Sorted and filtered the data of the analysis of 28 days.
 [See more details][3]
 
-### Limitations
+**Limitations**
 * The data isn't representative of all FitBit users.
 * The data is old.
 * Most of the users don't record all the activities.
@@ -68,7 +68,7 @@ ggplot(participants_use, aes(fill=usage, y = participants, x = "")) +
   labs(title = "Usage Daily Activity") +
   guides(fill = guide_legend(title = "Usage Type"))
 ```
-![image](/assets/images/bg-graph03.png)<!-- -->
+![image](assets/images/bg-graph03.png)<!-- -->
 
 ## 6. Conclusion and Recommendations
 According with this article [**14 Fitness Trackers That Are Better Than Having Your Own Workout Buddy**][5]{:target="_blank"} from Forbes found the band or a smartwatch are popular because most people are looking to stay in shape and these devices remind you to exercise and work as your own personal trainer.
